# ticproj2

./: README.md  SIEE App - Architecture & Decision Making .md  package-lock.json
altfront/: .gitignore
altfront/app/: MedicalRegister.tsx  _layout.tsx
altfront/app/(paramedic)/: LoginScreen.tsx  _layout.tsx
altfront/lib/: strings.ts
altfront/lib/components/: SieeLogo.tsx
altfront/lib/styles/: HamburgerHeader.styles.ts
back/: README.md  docker-compose.yaml
back/coordinator/: Dockerfile  flake.nix  pyproject.toml
back/coordinator/src/coordinator/: main.py  run.py  ws-ex.py
back/core/: flake.nix  mkdocs.yml  pyproject.toml
back/core/docs/: domain.md  index.md
back/core/docs/application/: factories.md  index.md  ports.md  use_cases.md
back/core/src/core/application/: factories.py
back/core/src/core/application/ports/: __init__.py  coordinator.py  port.py  realtime_storage.py
back/core/src/core/application/use_cases/: __init__.py  report_emergency.py
back/core/src/core/domain/entities/: __init__.py  emergency.py  paramedic.py
back/core/src/core/domain/value_objects/: location.py  medical_info.py
back/docker-service-discovery/: README.md  pyproject.toml
back/docker-service-discovery/src/docker_discovery/: __init__.py  adapter-mappings.yaml  discovery.py
back/dragonfly-realtime-storage/: README.md  pyproject.toml
back/dragonfly-realtime-storage/src/dragonfly_rtstorage/: __init__.py  main.py
docs-planeacion/: HU-citizen.md  HU-emergencyOperator.md  HU-paramedic.md
front/: .gitignore  App.tsx  README.md  app.json  flake.nix  global.css  package-lock.json  package.json  tailwind.config.js  typedoc.json  x.md
front/.direnv/: flake-profile-1-link
front/app/: AboutUs.tsx  Main.tsx  MedicalRegister.tsx  PQRS.tsx  _layout.tsx
front/app/(paramedic)/: EmergencyBrowser.tsx  LoginScreen.tsx  Report.tsx  _layout.tsx
front/lib/: models.ts  strings.ts
front/lib/api/: errors.ts  interfaces.ts  mock.ts  useApi.tsx
front/lib/components/: AppButton.tsx  AppInput.tsx  DropPickerDown.tsx  DropdownPicker.tsx  EmergencyBtn.tsx  HamburgerHeader.tsx  PersonSelector.test.tsx  PersonSelector.tsx  RadioOption.tsx  SieeLogo.tsx
front/lib/hooks/: useActiveEmergency.tsx  useMedicalInfo.tsx  useParamedicLocationTracking.tsx  useParamedicUser.tsx
front/lib/map/: leafletHtml.ts
front/lib/styles/: AppButton.styles.ts  AppInput.styles.ts  EmergencyBrowser.styles.ts  LoginScreen.styles.ts  MedicalRegister.styles.ts  Report.styles.ts  SieeLogo.styles.ts
front/lib/themes/: Colors.ts  theme.ts
front/scripts/: download-tiles.js  generate-leaflet-html.js
front/src/core/presentation/components/: AppButton.tsx  AppInput.tsx  HamburgerHeader.tsx  SieeLogo.tsx
front/src/core/presentation/navigation/: AppNavigator.tsx
front/src/core/presentation/screens/: LoginScreen.tsx
front/src/core/presentation/styles/: LoginScreen.styles.ts
front/src/core/presentation/themes/: Colors.ts  Spacing.ts  Typography.ts
registro-trabajo/actas-reuniones/: 260126-actareunion.md  260128-actareunion.md  260202-actareunion.md  260209-actareunion.md  260216-actareunion.md  260220-actareunion.md  260223-actareunion.md  260306-actareunion.md  ActaReunion-0.md
registro-trabajo/docs-investigacion/: APIs de Llamadas Telefónicas para Triaje Automatizado.md  bounded-contexts-detallado.md  frameworks-desarrollo.md  frameworks-moviles.md  frameworks-testing.md  gestores-paquetes-python.md  herramientas-documentacion.md  investigacion-apis-mapeoRutas.md  investigacion-cache.md  lenguaje-ubicuo.md  plataformas-lideres.md  que-es-databricks.md  relacion-proyecto-reto.md
siee-usuario/: app.json  flake.nix  package-lock.json  package.json
siee-usuario/app/: index.tsx
siee-usuario/components/: GeoButton.tsx
