[project]
name = "core"
version = "0.1.4"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = "<4,>=3.10"
dependencies = [
    "python-cqrs (>=4.8.1,<5.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "mkdocs (>=1.6.1,<2.0.0)",
    "mkdocs-material (>=9.7.1,<10.0.0)",
    "mkdocstrings[python] (>=1.0.3,<2.0.0)"
]
